--- a/README.org
+++ b/README.org
@@ -456,7 +456,7 @@ Do not track these tables:
 The reason not to track these tables in the ~postgres~ database is
 that these data will instead be brought in from the ~mongo~ database.
 
-[[https://github.com/user-attachments/assets/77424ec0-e1ed-4241-92e8-7ed3ea5ba261][2024-07-31_10-53-36.webm]]
+[[https://github.com/user-attachments/assets/77424ec0-e1ed-4241-92e8-7ed3ea5ba261][Step 1]]
 
 - What did this do? ::
   This step used Hasura Console to edit the Hasura metadata in order
@@ -493,7 +493,7 @@ docker exec scratch-mongo-1 mongosh --quiet -u mongo -p mongo --eval "EJSON.stri
 : {"_id":{"$oid":"6637f6cc7cda30b626bb1d07"},"AlbumId":1,"Title":"For Those About To Rock We Salute You","ArtistId":1}
 : {"_id":{"$oid":"6637f6ce7cda30b626bb1f75"},"TrackId":1,"Name":"For Those About To Rock (We Salute You)","AlbumId":1,"MediaTypeId":1,"GenreId":1,"Composer":"Angus Young, Malcolm Young, Brian Johnson","Milliseconds":343719,"Bytes":11170334,"UnitPrice":0.99}
 
-[[https://github.com/user-attachments/assets/9b2c7c46-d7e3-41ef-aa81-c39f77feaabc][2024-07-31_11-23-07.webm]]
+[[https://github.com/user-attachments/assets/9b2c7c46-d7e3-41ef-aa81-c39f77feaabc][Step 2]]
 
 - What did this do? ::
   This step used Hasura Console to edit the Hasura metadata in order to
@@ -501,7 +501,21 @@ docker exec scratch-mongo-1 mongosh --quiet -u mongo -p mongo --eval "EJSON.stri
   source. As discussed above, it also sampled the mongo collections in
   order to track its collections with suitable Logical Models.
 
-** Step 3:  Try a sample query.
+
+** Step 3:  Add relationships.
+
+Use Hasura Console as illustrated here to add relationships between
+MongoDB collections and PostgreSQL tables.
+
+[[https://github.com/user-attachments/assets/c514385b-5641-41d7-aa1f-080688657943][Step 3]]
+
+- What did this do? ::
+  This step used Hasura Console to edit the Hasura metadata in order
+  to establish relationships between tracked MongoDB collections and
+  tracked PostgreSQL tables.  This is the crucial step that links data
+  between different data sources.
+
+** Step 4:  Try a sample query.
 
 Use Hasura Console as illustrated here to try a sample GraphQL query
 that traverses both data source, ~postgres~ and ~mongo~, via the
@@ -533,7 +547,7 @@ query MyQuery {
 }
 #+end_src
 
-[[https://github.com/user-attachments/assets/fcb542bf-1338-49a0-b6c2-41f7674d458b][2024-07-31_11-58-04.webm]]
+[[https://github.com/user-attachments/assets/fcb542bf-1338-49a0-b6c2-41f7674d458b][Step 4]]
 
 - What did this do? ::
   This used the API tab in Hasura Console, itself a GraphQL client, to
